syntax = "proto3";

package authors;

import "graphql/graphql.proto";
option go_package = "example/authors;authors";

service Authors {
  option (graphql.host) =
      "localhost:50052";

  rpc getAuthors(GetAuthorsRequest) returns (GetAuthorsResponse) {}
}

message GetAuthorsRequest {
  repeated string ids = 1;
}

message GetAuthorsResponse {
  repeated Author authors = 1;
}

message Author {
  string id = 1;
  string name = 2;
}